56.todo-app-practice/add-task-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-task
  template:
    metadata:
      labels:
        app: add-task
    spec:
      containers:
      - name: add-task-container
        image: yugyogeshpawar/addtaskmicro
        ports:
        - containerPort: 8000
