56.todo-app-practice/delete-task-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata:
      labels:
        app: delete-task
    spec:
      containers:
      - name: delete-task-container
        image: yugyogeshpawar/deletetaskmicro
        ports:
        - containerPort: 8000
