56.todo-app-practice/get-task-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-task-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-task
  template:
    metadata:
      labels:
        app: get-task
    spec:
      containers:
      - name: get-task-container
        image: yugyogeshpawar/gettaskmicro
        ports:
        - containerPort: 8000
