56.todo-app-practice/todo-ui-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      labels:
        app: todo-ui
    spec:
      containers:
        - name: todo-ui-container
          image: 12cgaurav/todobackend:microtodouinew
          ports:
            - containerPort: 80
