56.todo-app-practice/add-task-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: add-task-svc
spec:
  type: ClusterIP
  selector:
    app: add-task
  ports:
  - port: 80
    targetPort: 8000
