56.todo-app-practice/delete-task-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-task-svc
spec:
  type: ClusterIP
  selector:
    app: delete-task
  ports:
  - port: 80
    targetPort: 8000
