56.todo-app-practice/get-task-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-task-svc
spec:
  type: ClusterIP
  selector:
    app: get-task
  ports:
  - port: 80
    targetPort: 8000
