56.todo-app-practice/todo-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: ClusterIP
  selector:
    app: todo-ui
  ports:
  - port: 80
    targetPort: 80
