56.todo-app-practice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: todoui.yogeshpawar.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-service
            port: 
              number: 80
  - host: get-task.yogeshpawar.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-task-svc
            port: 
              number: 80
  - host: add-task.yogeshpawar.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: add-task-svc
            port: 
              number: 80
  - host: delete-task.yogeshpawar.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: delete-task-svc
            port: 
              number: 80
